<resources>
    <string name="app_name">demo_app</string>
    <string name="home_description">Hello everyone, This is Johnson Wu\'s demo app </string>
    <string name="function_1">Order App</string>
    <string name="function_2">Inventory Control App</string>
    <string name="function_3">Quake Report</string>
    <string name="function_4">Tour Guide</string>
    <string name="function_1_introduction">
        This is a very simple order coffee app , let people can easier to order they want coffee!
    </string>
    <string name="function_2_introduction">
        This app help people can easier to check and change there inventory quantity.
    </string>
    <string name="function_3_introduction">
        It\'s a practice to use API in app , It\'s a simple quake app!
    </string>
    <string name="function_4_introduction">
        This tour guide app briefly introduce my hometown Kaohsiung,I choose a few popular attractions to share for other people.
    </string>
    <string name="f1_type_name">Name</string>
    <string name="f1_phone_number">Phone Number</string>
    <string name="f1_order_list">Order List : </string>
    <string name="f1_order_price">Price : </string>
    <string name="f1_add_button">add</string>
    <string name="f1_need_sugar">need sugar?</string>
    <string name="f1_order_list_title">Order List</string>
    <string name="f1_dollars">dollars</string>
    <string name="f1_action_ok">Ok</string>
    <string name="f1_warning">Please check your buyer information!</string>
    <string name="f1_choose_coffee">Please Choose a Coffee</string>
    <string name="f1_choose_quantity">Please Choose a Quantity</string>
    <string name="f1_order_name">Name :</string>
    <string name="f1_order_phone">Phone :</string>
    <string name="f1_submit_order">Submit Order</string>
    <string name="f1_thank_buyer_1">Very thanks your order,</string>
    <string name="f1_thank_buyer_2">Please check your order list.</string>
    <string name="f1_coffee_1_y">Espresso  need sugar</string>
    <string name="f1_coffee_1_n">Espresso  no sugar</string>
    <string name="f1_coffee_2_y">Cappuccino  need sugar</string>
    <string name="f1_coffee_2_n">Cappuccino  no sugar</string>
    <string name="f1_coffee_3_y">Mocha  need sugar</string>
    <string name="f1_coffee_3_n">Mocha  no sugar</string>
    <string name="f2_no_product">Here is no product …</string>
    <string name="f2_lets_add_product">Get started by adding a product!</string>
    <string name="f2_category_overview">Overview</string>
    <string name="f2_category_quantity">Quantity</string>
    <string name="f2_category_price">Price</string>
    <string name="f2_category_introduction">Introduction</string>
    <string name="f2_hint_product_name">Product name</string>
    <string name="f2_hint_product_type">Type</string>
    <string name="f2_hint_product_quantity">0</string>
    <string name="f2_hint_product_introduction">main component or made in where…</string>
    <string name="f2_button_minus">-</string>
    <string name="f2_button_plus">+</string>
    <string name="f2_unit_product_money">dollars</string>
    <string name="f2_product_sell_button">Sell</string>
    <string name="f2_show_inventory">inventory : </string>
    <string name="f2_action_delete">Delete</string>
    <string name="f2_action_save">Save</string>
    <string name="f2_action_editor">Editor</string>
    <string name="f2_action_insert_dummy_data">Insert Dummy Data</string>
    <string name="f2_action_delete_all_entries">Delete All Data</string>
    <string name="f2_editor_add_title">Add a product</string>
    <string name="f2_editor_editor_title">Editor product</string>
    <string name="f2_editor_insert_successful">Product saved</string>
    <string name="f2_editor_insert_failed">Error with saving product</string>
    <string name="f2_editor_update_successful">Product updated</string>
    <string name="f2_editor_update_failed">Error with updating Product</string>
    <string name="f2_unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="f2_discard">Discard</string>
    <string name="f2_keep_editing">Keep Editing</string>
    <string name="f2_delete_dialog_msg">Delete this product?</string>
    <string name="f2_delete">Delete</string>
    <string name="f2_cancel">Cancel</string>
    <string name="f2_editor_delete_successful">Product deleted</string>
    <string name="f2_editor_delete_failed">Error with deleting product</string>
    <string name="f3_near_the">Near the</string>
    <string name="f3_no_earthquakes">No earthquakes found.</string>
    <string name="f3_no_internet">No internet connection.</string>
    <string name="f3_settings_menu_item">Settings</string>
    <string name="f3_settings_title">Earthquake Settings</string>
    <string name="f3_settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="f3_settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="f3_settings_min_magnitude_default" translatable="false">6</string>
    <string name="f3_settings_order_by_label">Order By</string>
    <string name="f3_settings_order_by_key" translatable="false">order_by</string>
    <string name="f3_settings_order_by_default" translatable="false">@string/f3_settings_order_by_magnitude_value</string>
    <string name="f3_settings_order_by_magnitude_label">Magnitude</string>
    <string name="f3_settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <string name="f3_settings_order_by_most_recent_label">Most Recent</string>
    <string name="f3_settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="f4_openingRemark">Hello! Welcome to KAOHSIUNG City!</string>
    <string name="f4_title1">Banana Kingdom</string>
    <string name="f4_tabTitle1">Banana</string>
    <string name="f4_title2">Lianchihtan</string>
    <string name="f4_tabTitle2">Lianchihtan</string>
    <string name="f4_title3">Rueifong Night Market</string>
    <string name="f4_tabTitle3">Rueifong</string>
    <string name="f4_title4">THE PIER-2 ART CENTER</string>
    <string name="f4_tabTitle4">PIER-2</string>
    <string name="f4_bananaKingdom"> About a 30 minute drive east from Kaohsiung City lies the bustling little township of Qishan (also spelled Cishan). Qishan along with Meinong which is just across the river offer up good local food and picturesque mountainous views. It has a population of about 39,000.</string>
    <string name="f4_Lianchihtan">Lotus Pond, named after the aquatic plants growing in it, is located in eastern Zuoying District. The pond is surrounded by willow trees, area of 75 hectares, also an area of temples like Confucius Temple, Spring Autumn Pavilion and Dragon and Tiger Tower.</string>
    <string name="f4_RueifongNightMarket">Located on Nanping Road in Zuoying District of Kaohsiung City.Just like every other Taiwan night markets, Rueifong Night Market does not only offer a wide selection of local snacks, but also packed with youth oriented and multi-dimensional delicacies due to the population of youngsters attracted by the nearby Kaohsiung Arena(Is a Department store).</string>
    <string name="f4_ThePier2ArtCenter">The Pier-2 Art Center is housed in a formerly disused dockside warehouse that was transformed into a creativity center for design and contemporary art in southern Taiwan.</string>
    <string name="f4_title1_1">Qishan Stinky Tofu</string>
    <string name="f4_title1_1_1">is a form of fermented tofu that has a strong odor.</string>
    <string name="f4_title1_2">Banana Beer</string>
    <string name="f4_title1_2_1">There is banana juice in the beer.</string>
    <string name="f4_title1_3">Banana Cake</string>
    <string name="f4_title1_3_1">Add the banana inside the cake.</string>
    <string name="f4_title1_4">Banana Egg Rolls</string>
    <string name="f4_title1_4_1">The egg rolls are made from bananas, eggs and flour.</string>
    <string name="f4_title1_5">Banana Beverage</string>
    <string name="f4_title1_5_1">This beverage are made from many many banana and yeast.</string>
    <string name="f4_title1_6">Banana Ice Cream Bar</string>
    <string name="f4_title1_6_1">outer layer is chocolate, and inside is banana &amp; milk ice cream.</string>
    <string name="f4_title2_1">Dragon &amp; Tiger Tower</string>
    <string name="f4_title2_1_1">It is the most famous attraction of Lianchihtan.</string>
    <string name="f4_title2_2">Buddha Statues</string>
    <string name="f4_title2_2_1">Southeast Asia is known as the highest water gods.</string>
    <string name="f4_title2_3">Water Skiing</string>
    <string name="f4_title2_3_1">Is a relatively safe water activities.</string>
    <string name="f4_title2_4">Confucius Temple</string>
    <string name="f4_title2_4_1">This temple is to worship Confucius.</string>
    <string name="f4_title3_1">Pork Knuckle</string>
    <string name="f4_title3_1_1">Grilled pork feet with charcoal.</string>
    <string name="f4_title3_2">Roasted Duck Burrito</string>
    <string name="f4_title3_2_1">Use pancakes to wrap duck and onions.</string>
    <string name="f4_title3_3">Mochi</string>
    <string name="f4_title3_3_1">Use of glutinous rice and milk with a variety of ingredients made.</string>
    <string name="f4_title3_4">Chicken Skewers</string>
    <string name="f4_title3_4_1">Grilled chicken with a special sauce.</string>
    <string name="f4_title4_1">Yellow Robot</string>
    <string name="f4_title4_1_1">MayDay(Taiwan Music Band) presented to us this robot.</string>
    <string name="f4_title4_2">Upside down the house</string>
    <string name="f4_title4_2_1">Show a house where everything is upside down.</string>
    <string name="f4_title4_3">Display warehouse</string>
    <string name="f4_title4_3_1">Appearance is warehouse, but there is the exhibition.</string>
    <string name="f4_title4_4">Love\'s Men</string>
    <string name="f4_title4_4_1">The pattern behind this model can be pieced together into love!</string>
    <string name="f4_title4_5">Two people sitting</string>
    <string name="f4_title4_5_1">Two people sitting on the warehouse door.</string>
</resources>