<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/f3_settings_title">

    <ListPreference
        android:defaultValue="@string/f3_settings_order_by_default"
        android:entries="@array/f3_settings_order_by_labels"
        android:entryValues="@array/f3_settings_order_by_values"
        android:key="@string/f3_settings_order_by_key"
        android:title="@string/f3_settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/f3_settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/f3_settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/f3_settings_min_magnitude_label" />

</PreferenceScreen>