<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mobilogics.demo_app.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/home_description"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/fb_1"
                style="@style/Function_Button"
                android:text="@string/function_1" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Function_Introduction"
                android:text="@string/function_1_introduction" />

            <View style="@style/Divider" />

            <Button
                android:id="@+id/fb_2"
                style="@style/Function_Button"
                android:text="@string/function_2" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Function_Introduction"
                android:text="@string/function_2_introduction" />

            <Button
                android:id="@+id/fb_3"
                style="@style/Function_Button"
                android:text="@string/function_3" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Function_Introduction"
                android:text="@string/function_3_introduction" />

            <Button
                android:id="@+id/fb_4"
                style="@style/Function_Button"
                android:text="@string/function_4" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Function_Introduction"
                android:text="@string/function_4_introduction" />

        </LinearLayout>


    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />


</LinearLayout>
