<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Big_title"
        android:text="@string/f1_thank_buyer_1" />

    <TextView
        style="@style/Big_title"
        android:text="@string/f1_thank_buyer_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/f1_Buyer_information"
            android:gravity="right"
            android:paddingRight="8dp"
            android:text="@string/f1_order_name" />

        <TextView
            android:id="@+id/check_order_name"
            style="@style/f1_Buyer_information"
            tools:text="Johnson" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/f1_Buyer_information"
            android:gravity="right"
            android:paddingRight="8dp"
            android:text="@string/f1_order_phone" />

        <TextView
            android:id="@+id/check_order_phone"
            style="@style/f1_Buyer_information"
            tools:text="0928123456" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/f1_Buyer_information"
            android:gravity="right"
            android:paddingRight="8dp"
            android:text="@string/f1_order_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/check_order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                tools:text="50"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f1_dollars"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/f1_order_list"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/check_order_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </ScrollView>

    <Button
        android:id="@+id/submit_order"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="#01579B"
        android:text="@string/f1_submit_order"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />


</LinearLayout>