<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".inventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/f2_CategoryStyle"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/f2_category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/f2_hint_product_name"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_product_type"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/f2_hint_product_type"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/f2_CategoryStyle"
            android:layout_height="wrap_content"
            android:text="@string/f2_category_quantity" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/f2_hint_product_quantity"
                android:inputType="number" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/f2_CategoryStyle"
            android:layout_height="wrap_content"
            android:text="@string/f2_category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:hint="@string/f2_hint_product_quantity"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_weight_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/f2_unit_product_money"
                android:textAppearance="?android:textAppearanceSmall" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_introduction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/f2_CategoryStyle"
            android:layout_height="wrap_content"
            android:text="@string/f2_category_introduction" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->

            <EditText
                android:id="@+id/edit_product_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/f2_hint_product_introduction"
                android:inputType="textCapWords" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Product Picture : "
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_marginLeft="16dp"
            android:id="@+id/get_image_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add picture" />

    </LinearLayout>

    <ImageView
        android:id="@+id/editor_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray" />

</LinearLayout>